--- a/src/d2dxtests/d2dxtests.vcxproj
+++ b/src/d2dxtests/d2dxtests.vcxproj
@@ -57,14 +57,15 @@
       <PrecompiledHeader>Use</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>$(VCInstallDir)UnitTest\include;..\..\thirdparty\glide3;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>WIN32;_DEBUG;%(PreprocessorDefinitions);GX_UNITTEST</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>$(VCInstallDir)UnitTest\include;..\..\thirdparty\glide3;..\d2dx;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>WIN32;_DEBUG;%(PreprocessorDefinitions);D2DX_UNITTEST</PreprocessorDefinitions>
       <UseFullPaths>true</UseFullPaths>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <AdditionalLibraryDirectories>$(VCInstallDir)UnitTest\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>comctl32.lib;dxgi.lib;d3d11.lib;version.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -74,8 +75,8 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>$(VCInstallDir)UnitTest\include;..\..\thirdparty\glide3;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>WIN32;NDEBUG;%(PreprocessorDefinitions);GX_UNITTEST</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>$(VCInstallDir)UnitTest\include;..\..\thirdparty\glide3;..\d2dx;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>WIN32;NDEBUG;%(PreprocessorDefinitions);D2DX_UNITTEST</PreprocessorDefinitions>
       <UseFullPaths>true</UseFullPaths>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
     </ClCompile>
@@ -84,9 +85,18 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalLibraryDirectories>$(VCInstallDir)UnitTest\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>comctl32.lib;dxgi.lib;d3d11.lib;version.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\thirdparty\fnv\hash_32a.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">CompileAsCpp</CompileAs>
+    </ClCompile>
+    <ClCompile Include="..\d2dx\D2DXContext.cpp" />
+    <ClCompile Include="..\d2dx\D2DXDetours.cpp" />
+    <ClCompile Include="..\d2dx\D2DXIntegrationImpl.cpp" />
+    <ClCompile Include="..\d2dx\D3D11Context.cpp" />
     <ClCompile Include="..\d2dx\GameHelper.cpp" />
     <ClCompile Include="..\d2dx\glide3x.cpp" />
     <ClCompile Include="..\d2dx\Simd.cpp" />
@@ -103,7 +113,20 @@
     <ClCompile Include="TestSimd.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="pch.h" />
+    <ClInclude Include="..\d2dx\Batch.h" />
+    <ClInclude Include="..\d2dx\Buffer.h" />
+    <ClInclude Include="..\d2dx\D2DXContext.h" />
+    <ClInclude Include="..\d2dx\D2DXDetours.h" />
+    <ClInclude Include="..\d2dx\D3D11Context.h" />
+    <ClInclude Include="..\d2dx\dx256_bmp.h" />
+    <ClInclude Include="..\d2dx\GameHelper.h" />
+    <ClInclude Include="..\d2dx\TextureCache.h" />
+    <ClInclude Include="..\d2dx\TextureCachePolicy.h" />
+    <ClInclude Include="..\d2dx\TextureCachePolicyBitPmru.h" />
+    <ClInclude Include="..\d2dx\TextureProcessor.h" />
+    <ClInclude Include="..\d2dx\Types.h" />
+    <ClInclude Include="..\d2dx\Utils.h" />
+    <ClInclude Include="..\d2dx\Vertex.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
