--- a/src/d2dx/d2dx.vcxproj
+++ b/src/d2dx/d2dx.vcxproj
@@ -165,7 +165,9 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="D2DXContext.cpp" />
+    <ClCompile Include="D2DXContext.cpp">
+      <AssemblerOutput Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">AssemblyAndSourceCode</AssemblerOutput>
+    </ClCompile>
     <ClCompile Include="TextureCachePolicyBitPmru.cpp" />
     <ClCompile Include="TextureProcessor.cpp" />
     <ClCompile Include="Utils.cpp" />
